modificacao no html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./Html/style.css">
     <title>Document</title>
 </head>
 
@@ -14,7 +14,7 @@
         <header>
             <nav>
                 <ul class="lista">
-                    <li class="button"><img src="./assets/logos/gta5.png" alt="">
+                    <li class="button"><img src="./Html/assets/logos/gta5.png" alt="">
                     <ul class="submenu">
                       <li><a href="../sobre_gtav/sobre.html">Sobre</a></li>
                       <li><a href="../veiculos_gtav/veiculohp.html">Veiculos</a></li>
@@ -26,7 +26,7 @@
                       <li><a href="../armas_gtav/armas.html">Armas</a></li>
                     </ul>
                     </li>
-                    <li class="button"><img src="./assets/logos/gta4.png" alt="">
+                    <li class="button"><img src="./Html/assets/logos/gta4.png" alt="">
                       <ul class="submenu">
                         <li><a href="./franklin.html">Sobre</a></li>
                         <li><a>Veiculos</a></li>
@@ -37,7 +37,7 @@
                         <li><a>Conquistas</a></li>
                       </ul>
                     </li>
-                    <li class="button"><img src="./assets/logos/gtasa.png" alt="">
+                    <li class="button"><img src="./Html/assets/logos/gtasa.png" alt="">
                       <ul class="submenu">
                         <li><a>Sobre</a></li>
                         <li><a>Veiculos</a></li>
@@ -48,7 +48,7 @@
                         <li><a>Conquistas</a></li>
                       </ul>
                     </li>
-                    <li class="button"><img src="./assets/logos/gta-vice-city.png" alt="" style="margin-top: 5px;">
+                    <li class="button"><img src="./Html/assets/logos/gta-vice-city.png" alt="" style="margin-top: 5px;">
                         <ul class="submenu">
                             <li><a>Sobre</a></li>
                             <li><a>Veiculos</a></li>
@@ -59,7 +59,7 @@
                             <li><a>Conquistas</a></li>
                         </ul>
                     </li>
-                    <li class="button"><img src="./assets/logos/gta123.png" alt="" style="margin-bottom: 5px;">
+                    <li class="button"><img src="./Html/assets/logos/gta123.png" alt="" style="margin-bottom: 5px;">
                         <ul class="submenu">
                             <li><a>Sobre</a></li>
                             <li><a>Veiculos</a></li>
@@ -74,13 +74,13 @@
             </nav>
 
             <div class="imgboxheader">
-                <img src="./assets/html/banner.png" alt="">
+                <img src="./Html/assets/html/banner.png" alt="">
             </div>
         </header>
         <main>
             <div class="principal">
                 <div class="imgbox">
-                    <img src="./assets/html/banner.png" alt="">
+                    <img src="./Html/assets/html/banner.png" alt="">
 
                 </div>
                 <div class="contend">
