--- a/mapa_gtav/blaine_county.html
+++ b/mapa_gtav/blaine_county.html
@@ -42,7 +42,7 @@
         <header>
             <nav>
                 <ul class="lista">
-                    <li class="button"><img src="./assets/logos/gta5.png" alt="">
+                    <li class="button">Sobre<img src="./assets/logos/gta5.png" alt="">
                         <ul class="submenu">
                             <li><a href="../sobre_gtav/sobre.html">Sobre</a></li>
                             <li><a href="../veiculos_gtav/veiculohp.html">Veiculos</a></li>
