--- a/sobre_gtav/sobre.html
+++ b/sobre_gtav/sobre.html
@@ -37,68 +37,24 @@ function scrollToTop() {
 </head>
 <body>
   <div class="wrapper">
-    <header>
-        <nav>
-            <ul class="lista">
-                <li class="button"><img src="./assets/logos/gta5.png" alt="">
-                  <ul class="submenu">
-                    <li><a href="../sobre_gtav/sobre.html">Sobre</a></li>
-                    <li><a href="../veiculos_gtav/veiculohp.html">Veiculos</a></li>
-                    <li><a href="../personagens_gtav/teste.html">Personagens</a></li>
-                    <li><a href="../radio_gtav/radios.html">Rádios</a></li>
-                    <li><a href="../mapa_gtav/radios.html">Mapa</a></li>
-                    <li><a href="../cheats_gtav/cheats.html">Codigos</a></li>
-                    <li><a href="../trofeus_gtav/teste2.html">Conquistas</a></li>
-                    <li><a href="../armas_gtav/armas.html">Armas</a></li>
-                  </ul>
-                </li>
-                <li class="button"><img src="./assets/logos/gta4.png" alt="">
-                  <ul class="submenu">
-                    <li><a>Sobre</a></li>
-                    <li><a>Veiculos</a></li>
-                    <li><a>Personagens</a></li>
-                    <li><a>Rádios</a></li>
-                    <li><a>Mapas</a></li>
-                    <li><a>Codigos</a></li>
-                    <li><a>Conquistas</a></li>
-                  </ul>
-                </li>
-                <li class="button"><img src="./assets/logos/gta4.png" alt="">
-                  <ul class="submenu">
-                    <li><a>Sobre</a></li>
-                    <li><a>Veiculos</a></li>
-                    <li><a>Personagens</a></li>
-                    <li><a>Rádios</a></li>
-                    <li><a>Mapas</a></li>
-                    <li><a>Codigos</a></li>
-                    <li><a>Conquistas</a></li>
-                  </ul>
-                </li>
-                <li class="button"><img src="./assets/logos/gta-vice-city.png" alt="" style="margin-top: 5px;">
-                    <ul class="submenu">
-                        <li><a>Sobre</a></li>
-                        <li><a>Veiculos</a></li>
-                        <li><a>Personagens</a></li>
-                        <li><a>Rádios</a></li>
-                        <li><a>Mapas</a></li>
-                        <li><a>Codigos</a></li>
-                        <li><a>Conquistas</a></li>
-                    </ul>
-                </li>
-                <li class="button"><img src="./assets/logos/gta123.png" alt="" style="margin-bottom: 5px;">
-                    <ul class="submenu">
-                        <li><a>Sobre</a></li>
-                        <li><a>Veiculos</a></li>
-                        <li><a>Personagens</a></li>
-                        <li><a>Rádios</a></li>
-                        <li><a>Mapas</a></li>
-                        <li><a>Codigos</a></li>
-                        <li><a>Conquistas</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-    </header>
+		<header id="header">
+			<a id="logo" href=""><img src="./assets/logo.png" alt=""></a>
+			<nav id="nav">
+			<button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
+				<span id="hamburger"></span>
+			</button>
+			<ul id="menu" role="menu">
+				<li ><a  id="n555" href="../sobre_gtav/sobre.html">Sobre</a></li>
+				<li><a href="../veiculos_gtav/veiculohp.html">Veiculos</a></li>
+				<li><a href="../personagens_gtav/teste.html">Personagens</a></li>
+				<li><a href="../radio_gtav/radios.html">Rádios</a></li>
+				<li><a href="../mapa_gtav/mapashp.html">Mapa</a></li>
+				<li><a href="../cheats_gtav/cheats.html">Codigos</a></li>
+				<li><a href="../trofeus_gtav/teste2.html">Conquistas</a></li>
+				<li><a href="../armas_gtav/armas.html">Armas</a></li>
+			</ul>
+			</nav>
+		</header>
 
     <main>
       <div id="myelement" class="sticky-element">
@@ -106,7 +62,7 @@ function scrollToTop() {
       </div>
     
       <div class="logo">
-          <a href="../Html/index.html"><img src="./assets/logo.png" alt=""></a>
+          <a><img src="/" alt=""></a>
       </div>
 
       <h1>Grand Theft Auto V</h1>
@@ -545,5 +501,5 @@ function scrollToTop() {
   </footer>
 </div>
 </body>
-
+  <script src="../Html/teste.js"></script>
 </html>
