pagina 'radio' att 1 / pagina 'trofeus' att1

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu Mobile</title>
-  <link rel="stylesheet" href="./Html/teste.css">
+  <link rel="stylesheet" href="./Html/index.css">
+  <script src="./Html/code.jquery.com_jquery-3.7.0.js"></script>
 </head>
 
 <body>
 		<header id="header">
-			<a id="logo" href=""><img src="./Html/assets/logo.png" alt=""></a>
+			<a id="logo" href=""><img src="./Html/assets/logo.webp" alt=""></a>
 			<nav id="nav">
 			<button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
 				<span id="hamburger"></span>
@@ -31,7 +32,7 @@
 		<main>
 			<div class="principal">
 				<div class="imgbox">
-					<img src="./Html/assets/html/banner.png" alt="">
+					<img src="./Html/assets/banner.webp" alt="">
 
 				</div>
 				<div class="contend">
@@ -48,7 +49,7 @@
 								</figcaption>
 							</figure>
 							<figure class="imagens-jp">
-								<img alt="2011" src="./Html/assets/html/eurogamer-zjp1vx.webp">
+								<img alt="2011" src="./Html/assets/eurogamer-zjp1vx.webp">
 								<figcaption class="thumbcaption">
 								<p class="caption"><i>Arte do GTA V</i></p>
 								</figcaption>
@@ -58,7 +59,7 @@
 					<!-- <nav id="mainnav">
 						<ul class="lista">
 							<li id="n5987"><h2>JOGOS</h2></li>
-							<li class="button"><img src="./assets/logos/gta5.png" alt="">
+							<li class="button"><img src="./assets/logos/gta5.webp" alt="">
 								<ul class="submenu">
 									<li><a href="../sobre_gtav/sobre.html">Sobre</a></li>
 									<li><a href="../veiculos_gtav/veiculohp.html">Veiculos</a></li>
@@ -70,7 +71,7 @@
 									<li><a href="../armas_gtav/armas.html">Armas</a></li>
 								</ul>
 							</li>
-							<li class="button"><img src="./assets/logos/gta4.png" alt="">
+							<li class="button"><img src="./assets/logos/gta4.webp" alt="">
 								<ul class="submenu">
 								<li><a>Sobre</a></li>
 								<li><a>Veiculos</a></li>
@@ -81,7 +82,7 @@
 								<li><a>Conquistas</a></li>
 								</ul>
 							</li>
-							<li class="button"><img src="./assets/logos/gtasa.png" alt="">
+							<li class="button"><img src="./assets/logos/gtasa.webp" alt="">
 								<ul class="submenu">
 								<li><a>Sobre</a></li>
 								<li><a>Veiculos</a></li>
@@ -92,7 +93,7 @@
 								<li><a>Conquistas</a></li>
 								</ul>
 							</li>
-							<li class="button"><img src="./assets/logos/gta-vice-city.png" alt="" style="margin-top: 5px;">
+							<li class="button"><img src="./assets/logos/gta-vice-city.webp" alt="" style="margin-top: 5px;">
 								<ul class="submenu">
 									<li><a>Sobre</a></li>
 									<li><a>Veiculos</a></li>
@@ -103,7 +104,7 @@
 									<li><a>Conquistas</a></li>
 								</ul>
 								</li>
-							<li class="button"><img src="./assets/logos/gta123.png" alt="" style="margin-bottom: 5px;">
+							<li class="button"><img src="./assets/logos/gta123.webp" alt="" style="margin-bottom: 5px;">
 								<ul class="submenu">
 									<li><a>Sobre</a></li>
 									<li><a>Veiculos</a></li>
@@ -120,17 +121,17 @@
 					<!-- <nav id="mainnav">
 						<ul class="lista">
 							<li id="n5987"><h2>JOGOS</h2></li>
-							<li class="button"><span> Universo 2D</span><img src="./assets/html/GTA_1_Button.png" alt="">
+							<li class="button"><span> Universo 2D</span><img src="./assets/html/GTA_1_Button.webp" alt="">
 
 							</li>
-							<li class="button"><img src="./assets/logos/gta4.png" alt="">
+							<li class="button"><img src="./assets/logos/gta4.webp" alt="">
 							</li>
-							<li class="button"><img src="./assets/logos/gtasa.png" alt="">
+							<li class="button"><img src="./assets/logos/gtasa.webp" alt="">
 							</li>
-							<li class="button"><img src="./assets/logos/gta-vice-city.png" alt="" style="margin-top: 5px;">
+							<li class="button"><img src="./assets/logos/gta-vice-city.webp" alt="" style="margin-top: 5px;">
 			
 								</li>
-							<li class="button"><img src="./assets/logos/gta123.png" alt="" style="margin-bottom: 5px;">
+							<li class="button"><img src="./assets/logos/gta123.webp" alt="" style="margin-bottom: 5px;">
 								</li>
 						</ul>
 					</nav> -->
@@ -139,9 +140,9 @@
 					<!-- <div class="universos">
 						<h2>Saiba mais sobre os universos da Franquia GTA</h2>
 						<ul class="universos_ul">
-							<li><span> Universo 2D</span><img class="test" src="./assets/html/GTA_1_Button.png" alt=""></li>
+							<li><span> Universo 2D</span><img class="test" src="./assets/html/GTA_1_Button.webp" alt=""></li>
 							<li><span> Universo 3D</span><img class="test" src="./assets/html/GTA_III_Button.jpeg" alt=""></li>
-							<li><span> Universo HD</span><img class="test" src="./assets/html/GTA_IV_Button.png" alt=""></li>
+							<li><span> Universo HD</span><img class="test" src="./assets/html/GTA_IV_Button.webp" alt=""></li>
 						</ul>
 					</div> -->
 				</div>
@@ -187,12 +188,12 @@
 				</ul>
 				<hr class="separador">
 				<ul class="criadores">
-					<h2>Colaboradores</h2>
+					<h2>Desenvolvedores</h2>
 					<li>Erick Ribeiro</li>
 					<hr>
-					<li>Wendersson</li>
+					<li>Wenderson Dhomini</li>
 					<hr>
-					<li>Gerlândio</li>
+					<li>Gerlândio da Silva</li>
 					<hr>
 					<li>José Magno</li>
 					<hr>
@@ -202,12 +203,11 @@
 			</div>
 		</main>
 		<div class="imagem">
-			<img src="./Html/assets/html/homeimage.png" alt="">
+			<img src="./Html/assets/homeimage.webp" alt="">
 		</div>
 </body>
-
 </html>
-  <script src="./Html/teste.js"></script>
+  <script src="./Html/index.js"></script>
 </body>
 
 </html>
