--- a/armas_gtav/armas.html
+++ b/armas_gtav/armas.html
@@ -21,6 +21,21 @@
             });
         };
 
+        $(document).ready(function() {
+            $('.link-ancla').click(function(e) {
+              e.preventDefault();
+              
+              var target = $(this).attr('href');
+              var windowHeight = $(window).height();
+              var elementOffset = $(target).offset().top;
+              var scrollToPosition = elementOffset - (windowHeight / 2);
+              
+              $('html, body').animate({
+                scrollTop: scrollToPosition
+              }, 1000);
+            });
+          });
+
     </script>
     <script>
         function scrollToTop() {
